--- a/mission1-0928/index.html
+++ b/mission1-0928/index.html
@@ -6,25 +6,31 @@
 		<title>Pickle's blog</title>
 		<meta keywords = "pickle">
 		<meta description = "This is my webpage.">
+		<link rel="stylesheet" href="main.css">
 	</head>
 
-	<body bgcolor="yellow">
-		<h1> Hi, everyone.</h1>
-		<p >pickle</p>
-		1. love<br/>
-		2. love<br/>
-		<h1> h1</h1>
-		<h2> h2</h2>
-		<h3> h3</h3>
-		<h4> h4</h4>
-		<h5> h5</h5>
-		<h6> h6</h6>
-		<hr/>
-		<h1 align="center">center</h1>
-		<p>这是正文，不居中排列。上面是标题，居中排列。</p>
-		<!--yincang-->
-		<a href="http://pickle.blog.edu.cn">苦丁茶园地</a>
-		<br/>
-		<img src="images/bg.jpg"/>
+	<body>
+
+		<div id="edu">
+			<a href="edu.html"> <img src="images/edu.png"> </a>
+		</div>
+		<div id="man">
+			<a href="man.html"> <img src="images/man.png"> </a>
+		</div>
+		<div id="word">
+			<a href="word.html"> <img src="images/word.png"> </a>
+		</div>
+		<div id="hacker">
+			<a href="hacker.html"> <img src="images/hacker.png"> </a>
+		</div>
+		<div id="other">
+			<a href="other.html"> <img src="images/other.png"> </a>
+		</div>
+		<div id="about">
+			<a href="about.html"> <img src="images/about.png"> </a>
+		</div>
+		<div id="me">
+			<a href="me.html"> <img src="images/me.png"> </a>
+		</div>		
 	</body>
 </html>
