--- a/mission1-0928/index.html
+++ b/mission1-0928/index.html
@@ -31,6 +31,18 @@
 		</div>
 		<div id="me">
 			<a href="me.html"> <img src="images/me.png"> </a>
-		</div>		
+		</div>
+		<div id="foot">	
+			<div class="foot_left"> 
+				Picklecai <br/>
+				<a href="about.html">About Pickecai</a>
+			</div>
+
+			<div class="foot_right">
+				Contact <br/>
+				<a href="mailto:pickle.ahcai@163.com"> pickle.ahcai@163.com </a> 
+			</div>
+		</div>	
 	</body>
+
 </html>
