--- a/mission4-1010/效果图1013.html
+++ b/mission4-1010/效果图1013.html
@@ -72,5 +72,52 @@
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
+	<table id="__01" width="1440" height="1058" border="0" cellpadding="0" cellspacing="0">
+
+
+		<tr>
+
+			<td rowspan="4">
+				<img src="images/1013_06.png" width="30" height="517" alt=""></td>
+			<td>
+				<img src="images/1013_07.png" width="275" height="33" alt=""></td>
+			<td rowspan="4">
+				<img src="images/1013_08.png" width="29" height="517" alt=""></td>
+
+		</tr>
+		<tr>
+			<td>
+				<img src="images/1013_09.png" width="869" height="191" alt=""></td>
+			<td>
+				<img src="images/1013_10.png" width="275" height="191" alt=""></td>
+
+		</tr>
+		<tr>
+			<td>
+				<img src="images/1013_11.png" width="869" height="33" alt=""></td>
+			<td>
+				<img src="images/1013_12.png" width="275" height="33" alt=""></td>
+
+		</tr>
+		<tr>
+			<td>
+				<img src="images/1013_13.png" width="869" height="260" alt=""></td>
+			<td>
+				<img src="images/1013_14.png" width="275" height="260" alt=""></td>
+		</tr>
+		<tr>
+			<td colspan="4" rowspan="2">
+				<img src="images/1013_15.png" width="1203" height="8" alt=""></td>
+		</tr>
+		<tr>
+			<td>
+				<img src="images/1013_16.png" width="128" height="1" alt=""></td>
+		</tr>
+		<tr>
+			<td>
+				<img src="images/foot.png" width="1440" height="150" alt=""></td>
+		</tr>
+	</table>
+<!-- End Save for Web Slices -->
 </body>
 </html>
