--- a/mission4-1010/index.html
+++ b/mission4-1010/index.html
@@ -9,71 +9,31 @@
 		<meta description = "This is my webpage.">
 	</head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<!-- Save for Web Slices (1011.jpg) -->
+<body bgcolor="#e4e6e4" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
 	<div width="1440" height="1058">
-		<div> <img src="images/banner.png" width="1440" height="287" alt=""> </div>
-		<div> <img src="images/1013_01.png" width="1440" height="67" alt=""> </div>
-		<div >
-			<div style="float:left;"> <img src="images/1013_02.png" width="128" height="553" alt=""> </div>
-			<div style="margin-left:128px;"> <img src="images/1013_03.png" width="1203" height="29" alt=""> </div>	
-			<div style="margin-left:1331px; margin-top:-29px;"> <img src="images/1013_04.png" width="109" height="554" alt=""> </div>
+		<div style="margin:auto;"> <img src="images/banner.png" width="1440" height="287" alt=""> </div>
+		<div style="float:left; margin-top:5px;">
+			<div style="margin-left:128px;"> <img src="images/about.png" width="154" height="60" alt=""></div>
+			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
+			<div style="margin-left:465px; margin-top:-60px;"> <img src="images/photo.png" width="132" height="60" alt=""></div>
 		</div>
-		<div>
-			<div style="margin-left:128px; margin-top:-523px;"> <img src="images/1013_05.png" width="869" height="33" alt=""> </div>
-			<div style="margin-left:1531px; margin-top:-523px;"> <img src="images/1013_07.png" width="275" height="33" alt=""> </div>
+		<div style="background: #fff; margin:auto; width:1201px; height:500px; margin-top:70px;">
+			<div style="float:left">
+				<div style="margin-left:0px; margin-top:29px; "> <img src="images/1013_05.png" width="869" height="33" alt=""> </div>
+				<div style="margin-left:900px; margin-top:-33px;"> <img src="images/1013_07.png" width="275" height="33" alt=""> </div>
+			</div>
+			<div style="float:left; margin-top:191px;">
+				<div style="margin-left:0px; "> <img src="images/1013_11.png" width="869" height="33" alt=""> </div>
+				<div style="margin-left:900px; margin-top:-33px;"> <img src="images/1013_12.png" width="275" height="33" alt=""> </div>
+			</div>
 		</div>
-		<div> <img src="images/foot.png" width="1440" height="150" alt=""> </div>
+		<div style="margin:auto; margin-top:5px;">
+			<div style="margin-bottom:0px;"> <img src="images/foot.png" width="1440" height="150" alt=""> </div>
+		</div>
 	</div>
 
-	<table id="__01" width="1440" height="1058" border="0" cellpadding="0" cellspacing="0">
 
-
-		<tr>
-
-			<td rowspan="4">
-				<img src="images/1013_06.png" width="30" height="517" alt=""></td>
-			<td>
-				<img src="images/1013_07.png" width="275" height="33" alt=""></td>
-			<td rowspan="4">
-				<img src="images/1013_08.png" width="29" height="517" alt=""></td>
-
-		</tr>
-		<tr>
-			<td>
-				<img src="images/1013_09.png" width="869" height="191" alt=""></td>
-			<td>
-				<img src="images/1013_10.png" width="275" height="191" alt=""></td>
-
-		</tr>
-		<tr>
-			<td>
-				<img src="images/1013_11.png" width="869" height="33" alt=""></td>
-			<td>
-				<img src="images/1013_12.png" width="275" height="33" alt=""></td>
-
-		</tr>
-		<tr>
-			<td>
-				<img src="images/1013_13.png" width="869" height="260" alt=""></td>
-			<td>
-				<img src="images/1013_14.png" width="275" height="260" alt=""></td>
-		</tr>
-		<tr>
-			<td colspan="4" rowspan="2">
-				<img src="images/1013_15.png" width="1203" height="8" alt=""></td>
-		</tr>
-		<tr>
-			<td>
-				<img src="images/1013_16.png" width="128" height="1" alt=""></td>
-		</tr>
-		<tr>
-			<td>
-				<img src="images/foot.png" width="1440" height="150" alt=""></td>
-		</tr>
-	</table>
-<!-- End Save for Web Slices -->
 </body>
 
 </html>
