--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://wwww.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML">
 
 <html>
 
@@ -12,7 +12,7 @@
 <body bgcolor="#e4e6e4" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
 	<div width="1440" height="1058">
-		<div style="margin:auto;"> <img src="images/banner.png" width="1440" height="287" alt=""> </div>
+		<div style="margin-left:128px;"> <a href="about.html"> <img src="images/about.png" width="154" height="60" alt=""> </a> </div>
 		<div style="float:left; margin-top:5px;">
 			<div style="margin-left:128px;"> <img src="images/about.png" width="154" height="60" alt=""></div>
 			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
