--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML">
 
 <html>
 
@@ -14,20 +14,11 @@
 	<div width="1440" height="1058">
 		<div style="margin:auto;"> <img src="images/banner.png" width="1440" height="287" alt=""> </div>
 		<div style="float:left; margin-top:5px;">
-			<div style="margin-left:128px;"> <img src="images/about.png" width="154" height="60" alt=""></div>
+			<div style="margin-left:128px;"> <a href="about.html"> <img src="images/about.png" width="154" height="60" alt=""> </a> </div>
 			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
 			<div style="margin-left:465px; margin-top:-60px;"> <img src="images/photo.png" width="132" height="60" alt=""></div>
 		</div>
-		<div style="background: #fff; margin:auto; width:1201px; height:500px; margin-top:70px;">
-			<div style="float:left">
-				<div style="margin-left:0px; margin-top:29px; "> <img src="images/1013_05.png" width="869" height="33" alt=""> </div>
-				<div style="margin-left:900px; margin-top:-33px;"> <img src="images/1013_07.png" width="275" height="33" alt=""> </div>
-			</div>
-			<div style="float:left; margin-top:191px;">
-				<div style="margin-left:0px; "> <img src="images/1013_11.png" width="869" height="33" alt=""> </div>
-				<div style="margin-left:900px; margin-top:-33px;"> <img src="images/1013_12.png" width="275" height="33" alt=""> </div>
-			</div>
-		</div>
+		
 		<div style="margin:auto; margin-top:5px;">
 			<div style="margin-bottom:0px;"> <img src="images/foot.png" width="1440" height="150" alt=""> </div>
 		</div>
