--- a/mission6-1022/about.html
+++ b/mission6-1022/about.html
@@ -18,7 +18,8 @@
 			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
 			<div style="margin-left:465px; margin-top:-60px;"> <img src="images/photo.png" width="132" height="60" alt=""></div>
 		</div>
-		
+		<div style="background: #fff; margin:auto; width:1201px; height:500px; margin-top:70px;">
+		</div>
 		<div style="margin:auto; margin-top:5px;">
 			<div style="margin-bottom:0px;"> <img src="images/foot.png" width="1440" height="150" alt=""> </div>
 		</div>
