--- a/mission6-1022/about.html
+++ b/mission6-1022/about.html
@@ -7,13 +7,20 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 		<meta keywords = "pickle">
 		<meta description = "This is my webpage.">
+		<link rel="stylesheet" href="main.css">
 	</head>
 
-<body bgcolor="#e4e6e4" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body >
 
 	<div width="1440" height="1058">
-		<div style="margin:auto;"> <a href="index.html"> <img src="images/banner.png" width="1440" height="287" alt=""> </a> </div>
-		<div style="float:left; margin-top:5px;">
+		<div id="banner"> <a href="index.html"> <img src="images/banner.png"> </a> </div>
+		<div class="top_menu">
+			<ul>
+				<li> <a href="about.html"> <img src="images/about1.png"> </a> </li>
+				<li> <img src="images/essaylist.png"> </li>
+				<li> <img src="images/photo.png"> </li>
+			</ul>
+
 			<div style="margin-left:128px;"> <a href="about.html"> <img src="images/about1.png" width="154" height="60" alt=""> </a> </div>
 			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
 			<div style="margin-left:465px; margin-top:-60px;"> <img src="images/photo.png" width="132" height="60" alt=""></div>
