--- a/about.html
+++ b/about.html
@@ -1,31 +1,41 @@
 <!DOCTYPE HTML">
 
 <html>
-
 	<head>
 		<title>Pickle's blog</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta keywords = "pickle">
 		<meta description = "This is my webpage.">
+		<link rel="stylesheet" href="main.css">
 	</head>
 
-<body bgcolor="#e4e6e4" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-
-	<div width="1440" height="1058">
-		<div style="margin:auto;"> <a href="index.html"> <img src="images/banner.png" width="1440" height="287" alt=""> </a> </div>
-		<div style="float:left; margin-top:5px;">
-			<div style="margin-left:128px;"> <a href="about.html"> <img src="images/about1.png" width="154" height="60" alt=""> </a> </div>
-			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
-			<div style="margin-left:465px; margin-top:-60px;"> <img src="images/photo.png" width="132" height="60" alt=""></div>
+	<body >		
+		<div id="banner">
+			<a href="index.html"> <img src="images/banner.png"> </a>
 		</div>
-		<div style="background: #fff; margin:auto; width:1201px; height:500px; margin-top:70px;">
-		</div>		
-		<div style="margin:auto; margin-top:5px;">
-			<div style="margin-bottom:0px;"> <img src="images/foot.png" width="1440" height="150" alt=""> </div>
+		<div class="top_menu">
+			<ul>
+				<li> <a href="about.html"> <img src="images/about1.png"> </a> </li>
+				<li> <img src="images/essaylist.png"> </li>
+				<li> <img src="images/photo.png"> </li>
+			</ul>
 		</div>
-	</div>
+		<div class="main">
+			<div class="text_para">
+				<h2> 我 是 小 菜 </h2>
+				<p>我 欲 成 仙 ， 快 乐 齐 天 ！！！</p>
+				<p>
+					<p>我所居兮，青埂之峰。</p>
+					<p>我所游兮，鸿蒙太空。</p>
+					<p>谁与我游兮，吾谁与从。</p>
+					<p>渺渺茫茫兮，归彼大荒。</p>
+				</p>
+			</div>
+			<div class="img_para">
+			<img src="images/family.jpg">
+			</div>
 
-
-</body>
-
+		</div>
+		<div class="foot">版权所有：picklecai</div>
+	</body>
 </html>
