--- a/about.html
+++ b/about.html
@@ -10,14 +10,14 @@
 	</head>
 
 	<body >		
-		<div id="banner">
+		<div class="banner">
 			<a href="index.html"> <img src="images/banner.png"> </a>
 		</div>
 		<div class="top_menu">
 			<ul>
-				<li> <a href="about.html"> <img src="images/about1.png"> </a> </li>
-				<li> <img src="images/essaylist.png"> </li>
-				<li> <img src="images/photo.png"> </li>
+				<li> <a href="about.html">关于我</a> </li>
+				<li> 文章列表</li>
+				<li> 相册 </li>
 			</ul>
 		</div>
 		<div class="main">
@@ -36,6 +36,9 @@
 			</div>
 
 		</div>
-		<div class="foot">版权所有：picklecai</div>
+		<div class="foot">
+			<p> Picklecai的博客</p>
+			<p>版权所有：2016 @picklecai</p>
+		</div>
 	</body>
 </html>
