--- a/mission8-1108/index.html
+++ b/mission8-1108/index.html
@@ -19,16 +19,36 @@
 			<li> 相册 </li>
 		</ul>
 	</nav>
-	<div>
-		<section>
-			<img src="images/1013_05.png">
-		</section>
-		<section>
-			<h1> My first article</h1>
-			<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
-		</section>		
-	</div>
 
+	<section class="main_left">
+		<img src="images/1013_11.png">
+		<h3> 机智和白描</h3>
+		<h6> 分类：书影人      阅读：2113次</h6>
+		<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
+		<a href="/article.html"> 更多…… </a>
+		<hr />
+	</section>
+
+	<section class="main_left">
+		<h3> 机智和白描</h3>
+		<h6> 分类：书影人      阅读：2113次</h6>
+		<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
+		<a href="/article.html"> 更多…… </a>
+		<hr />
+	</section>
+
+	<section class="main_left">
+		<h3> 机智和白描</h3>
+		<h6> 分类：书影人      阅读：2113次</h6>
+		<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
+		<a href="/article.html"> 更多…… </a>
+		<hr />
+	</section>
+
+	<div class="foot">
+		<p> Picklecai的博客</p>
+		<p>版权所有：2016 @picklecai</p>
+	</div>
 
 </body>
 
