--- a/mission8-1108/index.html
+++ b/mission8-1108/index.html
@@ -4,11 +4,17 @@
 <head>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="main.css">
-	<title>Picklecai's Blog</title>
+	<title>Picklecai's Blog</title>	
 </head>
 
 <body>
-
+	<audio id="audio" loop="loop" src="music/chunfeng.mp3" preload="auto" style="opacity:0" hidden="true"><!-- controls="controls" -->
+		<source  type="audio/mp3">
+	</audio>
+	<script type="text/javascript">
+		var myAuto = document.getElementById('audio');
+		myAuto.play();
+	</script>	
 	<div class="banner">
 		<a href="index.html"> <img src="images/banner.png"> </a>
 	</div>
