--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
-<!DOCTYPE HTML">
-
+<!DOCTYPE html>
 <html>
 
-	<head>
-		<title>Pickle's blog</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-		<meta keywords = "pickle">
-		<meta description = "This is my webpage.">
-	</head>
+<head>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" href="main.css">
+	<title>Picklecai's Blog</title>	
+</head>
 
-<body bgcolor="#e4e6e4" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-
-	<div width="1440" height="1058">
-		<div style="margin:auto;"> <a href="index.html"> <img src="images/banner.png" width="1440" height="287" alt=""> </a> </div>
-		<div style="float:left; margin-top:5px;">
-			<div style="margin-left:128px;"> <a href="about.html"> <img src="images/about.png" width="154" height="60" alt=""> </a> </div>
-			<div style="margin-left:282px; margin-top:-60px;"> <img src="images/essaylist.png" width="183" height="60" alt=""></div>
-			<div style="margin-left:465px; margin-top:-60px;"> <img src="images/photo.png" width="132" height="60" alt=""></div>
-		</div>
-		<div style="background: #fff; margin:auto; width:1201px; height:500px; margin-top:70px;">
-			<div style="float:left">
-				<div style="margin-left:0px; margin-top:29px; "> <img src="images/1013_05.png" width="869" height="33" alt=""> </div>
-				<div style="margin-left:900px; margin-top:-33px;"> <img src="images/1013_07.png" width="275" height="33" alt=""> </div>
-			</div>
-			<div style="float:left; margin-top:191px;">
-				<div style="margin-left:0px; "> <img src="images/1013_11.png" width="869" height="33" alt=""> </div>
-				<div style="margin-left:900px; margin-top:-33px;"> <img src="images/1013_12.png" width="275" height="33" alt=""> </div>
-			</div>
-		</div>
-		<div style="margin:auto; margin-top:5px;">
-			<div style="margin-bottom:0px;"> <img src="images/foot.png" width="1440" height="150" alt=""> </div>
-		</div>
+<body>
+	<audio id="audio" loop="loop" src="music/chunfeng.mp3" preload="auto" style="opacity:0" hidden="true"><!-- controls="controls" -->
+		<source  type="audio/mp3">
+	</audio>
+	<script type="text/javascript">
+		var myAuto = document.getElementById('audio');
+		myAuto.play();
+	</script>	
+	<div class="banner">
+		<a href="index.html"> <img src="images/banner.png"> </a>
 	</div>
+	<nav  class="top_menu">
+		<ul>
+			<li> <a href="about.html">关于我</a> </li>
+			<li> 文章列表</li>
+			<li> 相册 </li>
+		</ul>
+	</nav>
 
+	<section class="main_left">
+		<img src="images/1013_11.png">
+		<h3> 机智和白描</h3>
+		<h6> 分类：书影人      阅读：2113次</h6>
+		<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
+		<a href="/article.html"> 更多…… </a>
+		<hr />
+	</section>
+
+	<section class="main_left">
+		<h3> 机智和白描</h3>
+		<h6> 分类：书影人      阅读：2113次</h6>
+		<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
+		<a href="/article.html"> 更多…… </a>
+		<hr />
+	</section>
+
+	<section class="main_left">
+		<h3> 机智和白描</h3>
+		<h6> 分类：书影人      阅读：2113次</h6>
+		<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
+		<a href="/article.html"> 更多…… </a>
+		<hr />
+	</section>
+
+	<div class="foot">
+		<p> Picklecai的博客</p>
+		<p>版权所有：2016 @picklecai</p>
+	</div>
 
 </body>
 
