--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 
 <body>
-	<audio id="audio" loop="loop" src="music/chunfeng.mp3" preload="auto" style="opacity:0" hidden="true"><!-- controls="controls" -->
-		<source  type="audio/mp3">
-	</audio>
-	<script type="text/javascript">
+	<audio id="audio" loop="loop" autoplay="autoplay"  src="music/chunfeng.mp3" > </audio>
+	<!-- <script type="text/javascript">
 		var myAuto = document.getElementById('audio');
 		myAuto.play();
-	</script>	
+	</script>	-->
 	<div class="banner">
 		<a href="index.html"> <img src="images/banner.png"> </a>
 	</div>
@@ -51,10 +49,10 @@
 		<hr />
 	</section>
 
-	<div class="foot">
+	<footer class="foot">
 		<p> Picklecai的博客</p>
-		<p>版权所有：2016 @picklecai</p>
-	</div>
+		<p>版权所有：2016 @picklecai</p>		
+	</footer>
 
 </body>
 
