--- a/mission9-1115/index.html
+++ b/mission9-1115/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 	<head>
-		<meta charset="utf-8"/>
-		<title> Picklecai's Book in 2016 </title>
+		<meta charset="utf-8">
+		<title>Picklecai's Book in 2016</title>
 	</head>
 
 	<body>
 		<script type="text/javascript" src="book.js"></script>
+		<table id="book_info">
+			<tr></tr>
+
+		</table>
 	</body>
 
 </html>
