--- a/mission9-1115/index.html
+++ b/mission9-1115/index.html
@@ -7,10 +7,21 @@
 	</head>
 
 	<body>
-		<script type="text/javascript" src="book.js"></script>
-		<table id="book_info">
-			<tr></tr>
+		<!--<script type="text/javascript" src="book.js"></script>-->
 
+		<table border="1" cellspacing="1" cellpadding="1" id="book_info">
+			<tr>
+				<td>Id</td>
+				<td>Book Name</td>
+				<td>Author</td>
+				<td>Score</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
 		</table>
 	</body>
 
