--- a/mission9-1115/index.html
+++ b/mission9-1115/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<!--<script type="text/javascript" src="book.js"></script>-->
+		<script type="text/javascript" src="book.js"></script>
 
 		<table border="1" cellspacing="1" cellpadding="1" id="book_info">
 			<tr>
