--- a/mission10-1123/index.html
+++ b/mission10-1123/index.html
@@ -10,18 +10,24 @@
 	<body>
 
 		<header role="banner">
-			<h1>Welcome to Pickle's Blog </h1>
+			<!--<div class="head_img">
+				<a href="index.html"> <img src="images/banner.png"> </a>
+			</div>-->
+			<h1 class="head_text">Welcome to Pickle's Blog </h1>	
+			<hr/>	
 		</header>
 
 		<main role="main">
-			<nav>
+			<nav class="nav">
+				<img src="images/1013_12.png">
 				<ul>
 					<li> <a href="about.html">关于我</a> </li>
 					<li> 文章列表</li>
 					<li> 相册 </li>
 				</ul>
 			</nav>	
-			<div>
+
+			<div class="article_list">
 				<section>
 					<img src="images/1013_11.png">
 					<h3> 机智和白描</h3>
@@ -49,12 +55,19 @@
 					<h6> 分类：书影人      阅读：2113次</h6>
 					<p> 机敏的文字容易让人佩服，白描的文字，不免让人生厌，没有耐心看完。所以对于钱钟书风格的文字，我小时候是接触过的。而张爱玲风格的文字就不熟悉。只要一看到 ... </p>
 					<a href="/section.html"> 更多…… </a>
-					<hr />
+					<!--<hr />-->
 				</section>
 			</div>
+
+			<div class="myself">
+				<img src="images/1013_07.png">
+				<p>PickleCai: 80's girl;</p>
+			</div>
+
 		</main>
 
-		<footer>
+		<footer class="foot">
+			<hr/>
 			<p><small>&copy; Copyright All About Picklecai</small></p>
 		</footer>
 
