--- a/mission11-1207/index.html
+++ b/mission11-1207/index.html
@@ -15,18 +15,35 @@
 
 		<main role="main">
 			<section class="sec">
-				<p class="sec_title">团队</p>
-				<p>教练：培炎</p>
-				<p>成员：绝缘儿、零丁、Picklecai</p>				
+				<h2 class="sec_title">团队</h2>
+				<h3>教练：</h3>
+				<div class="member3">
+					<img src="images/cp4.jpg" class="round_img">
+					<p>培炎</p>
+				</div>
+
+				<h3>成员：</h3>
+				<div class="member1">
+					<img src="images/chuanyang.jpg" class="round_img">	
+					<p>绝缘儿</p>	
+				</div>		
+				<div class="member2">
+					<img src="images/lingding.jpg" class="round_img">
+					<p>零丁</p>
+				</div>
+				<div class="member3">
+					<img src="images/picklecai.jpg" class="round_img">
+					<p>Picklecai</p>
+				</div>
 			</section>
 
 			<section class="sec">
-				<p class="sec_title">主营业务</p>
+				<h2 class="sec_title">主营业务</h3>
 				<p>承接设计、简单前端工作以及瞎扯……</p>
 			</section>
 
 			<section class="sec">
-				<p class="sec_title">联系方式</p>				
+				<h2 class="sec_title">联系方式</h2>				
 				<p>公司地址：</p>
 				<p>电话号码：</p>
 				<p>联系人：</p>
