--- a/mission11-1207/index.html
+++ b/mission11-1207/index.html
@@ -17,23 +17,25 @@
 			<section class="sec">
 				<h2 class="sec_title">团队</h2>
 				<h3>教练：</h3>
-				<div class="member3">
+				<div class="coach">
 					<img src="images/cp4.jpg" class="round_img">
 					<p>培炎</p>
 				</div>
 
 				<h3>成员：</h3>
-				<div class="member1">
-					<img src="images/chuanyang.jpg" class="round_img">	
-					<p>绝缘儿</p>	
-				</div>		
-				<div class="member2">
-					<img src="images/lingding.jpg" class="round_img">
-					<p>零丁</p>
-				</div>
-				<div class="member3">
-					<img src="images/picklecai.jpg" class="round_img">
-					<p>Picklecai</p>
+				<div class="member">
+					<div class="member1">
+						<img src="images/chuanyang.jpg" class="round_img">	
+						<p>绝缘儿</p>	
+					</div>		
+					<div class="member2">
+						<img src="images/lingding.jpg" class="round_img">
+						<p>零丁</p>
+					</div>
+					<div class="member3">
+						<img src="images/picklecai.jpg" class="round_img">
+						<p>Picklecai</p>
+					</div>
 				</div>
 			</section>
 
