--- a/mission11-1207/test.html
+++ b/mission11-1207/test.html
@@ -12,8 +12,9 @@
 			<h1>HTML薄荷组</h1>
 		</header>
 
-		<main role="main" class="main">
+		<main role="main">
 
+		<div  class="main">
 			<div class="primary">
 				<div class="primary">
 					我是主要内容1. 速度决定启用小时候的一目十行来读这本书。同时设定页数百分比。尽量摒弃默读字的坏毛病。其结果是读完全书用了3小时43分。（靠manictime的统计）2.过滤垃圾邮件我一直用关键词过滤法。然而作者说：这个误判率还是会很高。他用贝叶斯概率统计算法。我想想，有道理，出现概率跑不掉的，所以更精确。3.Lisp为什么最好读田春博客时（以及毛毛讲的田春故事），他说Lisp最好。作者解释了它为什么最好。他也提到了python，说它为了更像Lisp把错误的也模仿来了。总之也算认可py吧。
@@ -26,6 +27,17 @@
 			<div class="secondary">
 			我是左侧栏
 			</div>
+		</div>
+
+		<div class="main2">
+			<div class="img">
+				<img src="images/cp4.jpg">
+			</div>
+			<div class="txt">
+				我是主要内容1. 速度决定启用小时候的一目十行来读这本书。同时设定页数百分比。尽量摒弃默读字的坏毛病。其结果是读完全书用了3小时43分。（靠manictime的统计）2.过滤垃圾邮件我一直用关键词过滤法。然而作者说：这个误判率还是会很高。他用贝叶斯概率统计算法。我想想，有道理，出现概率跑不掉的，所以更精确。3.Lisp为什么最好读田春博客时（以及毛毛讲的田春故事），他说Lisp最好。作者解释了它为什么最好。他也提到了python，说它为了更像Lisp把错误的也模仿来了。总之也算认可py吧。
+			</div>
+
+		</div>
 
 		</main>
 
