可以在当页显示

--- a/mission12-1214/gallery.html
+++ b/mission12-1214/gallery.html
@@ -12,28 +12,28 @@
 		<h1>My image gallery</h1>
 		<ul>
 			<li>
-				<a href="images/color.jpg" title="color">Color</a>
+				<a href="images/color.jpg" onclick="showPic(this); return false;" title="color">Color</a>
 			</li>
 			<li>
-				<a href="images/designer.jpg" title="designer">designer</a>
+				<a href="images/designer.jpg" onclick="showPic(this); return false;" title="designer">designer</a>
 			</li>
 			<li>
-				<a href="images/discussion.jpg" title="discussion">discussion</a>
+				<a href="images/discussion.jpg" onclick="showPic(this); return false;" title="discussion">discussion</a>
 			</li>
 			<li>
-				<a href="images/ladder.jpg" title="ladder">ladder</a>
+				<a href="images/ladder.jpg" onclick="showPic(this); return false;" title="ladder">ladder</a>
 			</li>
 			<li>
-				<a href="images/pc.jpg" title="pc">pc</a>
+				<a href="images/pc.jpg" onclick="showPic(this); return false;" title="pc">pc</a>
 			</li>
 			<li>
-				<a href="images/quality.jpg" title="quality">quality</a>
+				<a href="images/quality.jpg" onclick="showPic(this); return false;" title="quality">quality</a>
 			</li>
 			<li>
-				<a href="images/question.jpg" title="question">question</a>
+				<a href="images/question.jpg" onclick="showPic(this); return false;" title="question">question</a>
 			</li>
 			<li>
-				<a href="images/read.jpg" title="read">read</a>
+				<a href="images/read.jpg" onclick="showPic(this); return false;" title="read">read</a>
 			</li>
 		</ul>
 		<img id="placeholder" src="images/placeholder.png" alt="my image gallery" />
