--- a/mission12-1214/gallery.html
+++ b/mission12-1214/gallery.html
@@ -37,6 +37,7 @@
 			</li>
 		</ul>
 		<img id="placeholder" src="images/placeholder.png" alt="my image gallery" />
+		<p id="description" >Choose</p>
 
 
 	</body>
