--- a/mission14-1229/index.html
+++ b/mission14-1229/index.html
@@ -3,20 +3,20 @@
 
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="test1.css">
 		<title>Pull down menu</title>
 	</head>
 
 	<body>
 
-	<nav  class="menu">
+	<nav>
 		<ul>
-			<li class="left">
+			<li>
 				<a href="articles.html">Articles</a>
 			</li>
-			<li class="middle">
+			<li>
 				<a href="books.html">Books</a>
-				<ul class="child">
+				<ul>
 					<li>
 						<a href="">c-menu1</a>
 					</li>
@@ -28,9 +28,9 @@
 					</li>
 				</ul>				
 			</li>
-			<li class="middle">
+			<li>
 				<a href="resources.html">Resources</a>
-				<ul class="child">
+				<ul>
 					<li>
 						<a href="">c-menu1</a>
 					</li>
@@ -42,9 +42,9 @@
 					</li>
 				</ul>	
 			</li>
-			<li class="middle">
+			<li>
 				<a href="bookshelf.html">Bookshelf</a>
-				<ul class="child">
+				<ul>
 					<li>
 						<a href="">c-menu1</a>
 					</li>
@@ -56,7 +56,7 @@
 					</li>
 				</ul>					
 			</li>
-			<li class="right">
+			<li>
 				<a href="contact.html">ContactMe</a>
 
 			</li>
