--- a/mission14-1229/index.html
+++ b/mission14-1229/index.html
@@ -18,28 +18,34 @@
 				<a href="books.html">Books</a>
 				<ul>
 					<li>
-						<a href="">c-menu1</a>
+						<a href="">Stylin' with CSS</a>
 					</li>
 					<li>
-						<a href="">c-menu2</a>
+						<a href="">Visual Stylin' with CSS3</a>
 					</li>
 					<li>
-						<a href="">c-menu3</a>
+						<a href="">Scriptin' with JavaScript and Ajax</a>
 					</li>
+					<li>
+						<a href="">Codin' for the Web</a>
+					</li>					
 				</ul>				
 			</li>
 			<li>
 				<a href="resources.html">Resources</a>
 				<ul>
 					<li>
-						<a href="">c-menu1</a>
+						<a href="">CSS Selectors</a>
 					</li>
 					<li>
-						<a href="">c-menu2</a>
+						<a href="">CSS3 Selectors</a>
 					</li>
 					<li>
-						<a href="">c-menu3</a>
+						<a href="">CSS Properties</a>
 					</li>
+					<li>
+						<a href="">HTML and HTML5 Elements</a>
+					</li>					
 				</ul>	
 			</li>
 			<li>
