第二个例子

--- a/mission16-0117/index.html
+++ b/mission16-0117/index.html
@@ -13,6 +13,8 @@
 		<p> Powered by HTML5 Canvas</p>
 	</canvas>
 
+	<canvas id="tshirtCanvas" width="600" height="200"></canvas>
+
 		<script type="text/javascript" src="canvas.js"></script>			
 	</body>
 
