--- a/mission16-0117/index.html
+++ b/mission16-0117/index.html
@@ -8,14 +8,12 @@
 	</head>
 
 	<body>
-
-	<canvas id="draw-in-me" width="120" height="40">
-		<p> Powered by HTML5 Canvas</p>
-	</canvas>
-
-	<canvas id="tshirtCanvas" width="600" height="200"></canvas>
-
-		<script type="text/javascript" src="canvas.js"></script>			
+		<canvas id="draw-in-me" width="120" height="40"><p> Powered by HTML5 Canvas</p></canvas>
+		<canvas id="tshirtCanvas" width="600" height="200"><p> Powered by HTML5 Canvas</p></canvas>
+		<script type="text/javascript" src="canvas.js"></script>
+		<form>
+			<p></p>
+		</form>		
 	</body>
 
 </html>	
