--- a/mission16-0117/index.html
+++ b/mission16-0117/index.html
@@ -8,11 +8,39 @@
 	</head>
 
 	<body>
-		<canvas id="draw-in-me" width="120" height="40"><p> Powered by HTML5 Canvas</p></canvas>
+		<!--<canvas id="draw-in-me" width="120" height="40"><p> Powered by HTML5 Canvas</p></canvas>-->
 		<canvas id="tshirtCanvas" width="600" height="200"><p> Powered by HTML5 Canvas</p></canvas>
 		<script type="text/javascript" src="canvas.js"></script>
 		<form>
-			<p></p>
+			<p>
+				<label for="backgroundColor">Select background color:</label>
+				<select id="backgroundColor">
+					<option value="white" selected="selected">White</option>
+					<option value="black">Black</option>
+				</select>
+			</p>
+			<p>
+				<label for="shape">Circles or squares?</label>
+				<select id="shape">
+					<option value="none" selected="selected">Neither</option>
+					<option value="circles">Circles</option>
+					<option value="squares">Squares</option>
+				</select>
+			</p>
+			<p>
+				<label for="foregroundColor">Select text color:</label>
+				<select id="foregroundColor">
+					<option value="black" selected="selected">Black</option>
+					<option value="white">White</option>
+				</select>
+			</p>
+			<p>
+				<label for="tweets">Pick a tweet:</label>
+				<select id="tweets"></select>
+			</p>
+			<p>
+				<input type="button" id="previewButton" value="Preview">
+			</p>
 		</form>		
 	</body>
 
